--- a/fillPaintMaster/Base.lproj/Main.storyboard
+++ b/fillPaintMaster/Base.lproj/Main.storyboard
@@ -25,7 +25,129 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="852" y="-92"/>
+            <point key="canvasLocation" x="284" y="-8"/>
+        </scene>
+        <!--Car Beauty View Controller-->
+        <scene sceneID="BQ8-T8-hqD">
+            <objects>
+                <viewController storyboardIdentifier="beautyVC" id="FxJ-xF-6Mx" customClass="CarBeautyViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ETw-2h-cgj"/>
+                        <viewControllerLayoutGuide type="bottom" id="Tbo-e1-Pya"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dul-x9-Vnx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TSO-Lp-aet">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RrQ-Yt-FiC">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4nR-f6-jlB">
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="34"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="请选择预约时间：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WUb-ru-H12">
+                                                        <rect key="frame" x="8" y="6" width="145" height="21"/>
+                                                        <animations/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="2lV-Xn-3FU">
+                                                        <rect key="frame" x="214" y="3" width="81" height="29"/>
+                                                        <animations/>
+                                                        <segments>
+                                                            <segment title="今天"/>
+                                                            <segment title="明天"/>
+                                                        </segments>
+                                                    </segmentedControl>
+                                                </subviews>
+                                                <animations/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I2O-MQ-sB2">
+                                                <rect key="frame" x="0.0" y="33" width="320" height="147"/>
+                                                <animations/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </view>
+                                        </subviews>
+                                        <animations/>
+                                        <color key="backgroundColor" red="0.26608883030000002" green="1" blue="0.47942269329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="180" id="aiQ-vV-9Bk"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qSM-hL-KKb">
+                                        <rect key="frame" x="0.0" y="499" width="320" height="49"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XXP-cb-bfW">
+                                                <rect key="frame" x="2" y="1" width="52" height="47"/>
+                                                <animations/>
+                                                <state key="normal" image="cart"/>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0元" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCy-84-zOS">
+                                                <rect key="frame" x="62" y="7" width="138" height="34"/>
+                                                <animations/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                                <color key="textColor" red="0.40011452879581155" green="0.40011452879581155" blue="0.40011452879581155" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GZO-QL-5IA">
+                                                <rect key="frame" x="232" y="7" width="80" height="34"/>
+                                                <animations/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <state key="normal" title="预约">
+                                                    <color key="titleColor" red="0.49625736259999997" green="0.49625736259999997" blue="0.49625736259999997" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <animations/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="49" id="7Xw-K1-3JL"/>
+                                        </constraints>
+                                    </view>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="POL-bu-p8D">
+                                        <rect key="frame" x="0.0" y="180" width="320" height="320"/>
+                                        <animations/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </tableView>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" red="0.92733556937172779" green="0.92733556937172779" blue="0.92733556937172779" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="qSM-hL-KKb" secondAttribute="trailing" id="3xe-VJ-NUJ"/>
+                                    <constraint firstItem="RrQ-Yt-FiC" firstAttribute="top" secondItem="TSO-Lp-aet" secondAttribute="top" id="5SB-fu-31p"/>
+                                    <constraint firstAttribute="trailing" secondItem="RrQ-Yt-FiC" secondAttribute="trailing" id="IXG-ti-KXE"/>
+                                    <constraint firstItem="qSM-hL-KKb" firstAttribute="leading" secondItem="TSO-Lp-aet" secondAttribute="leading" id="OV1-Ej-QjN"/>
+                                    <constraint firstItem="qSM-hL-KKb" firstAttribute="top" secondItem="POL-bu-p8D" secondAttribute="bottom" constant="-1" id="Yue-56-PCi"/>
+                                    <constraint firstItem="POL-bu-p8D" firstAttribute="top" secondItem="RrQ-Yt-FiC" secondAttribute="bottom" id="aAE-6X-RIX"/>
+                                    <constraint firstAttribute="bottom" secondItem="qSM-hL-KKb" secondAttribute="bottom" id="aKJ-nQ-SDL"/>
+                                    <constraint firstItem="RrQ-Yt-FiC" firstAttribute="leading" secondItem="TSO-Lp-aet" secondAttribute="leading" id="f2u-ir-856"/>
+                                    <constraint firstItem="POL-bu-p8D" firstAttribute="leading" secondItem="TSO-Lp-aet" secondAttribute="leading" id="i6d-UI-58n"/>
+                                    <constraint firstAttribute="trailing" secondItem="POL-bu-p8D" secondAttribute="trailing" id="wSW-O8-uwZ"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TSO-Lp-aet" firstAttribute="top" secondItem="ETw-2h-cgj" secondAttribute="bottom" id="46J-xb-1Nz"/>
+                            <constraint firstAttribute="trailing" secondItem="TSO-Lp-aet" secondAttribute="trailing" id="lIh-oD-tOX"/>
+                            <constraint firstItem="TSO-Lp-aet" firstAttribute="leading" secondItem="dul-x9-Vnx" secondAttribute="leading" id="rPV-aM-YM2"/>
+                            <constraint firstItem="TSO-Lp-aet" firstAttribute="bottom" secondItem="Tbo-e1-Pya" secondAttribute="top" id="srm-tK-IG9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="beautyItemTableView" destination="POL-bu-p8D" id="nsB-st-EnC"/>
+                        <outlet property="timeView" destination="I2O-MQ-sB2" id="dNj-gn-N3G"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Ks-CQ-2ii" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="986" y="-113"/>
         </scene>
         <!--Item-->
         <scene sceneID="ts3-eK-y98">
@@ -45,7 +167,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Puc-UA-qQw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="852" y="588"/>
+            <point key="canvasLocation" x="304" y="672"/>
         </scene>
         <!--Item-->
         <scene sceneID="6aX-6w-o54">
@@ -65,7 +187,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pUa-dZ-ZGE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="516" y="1003"/>
+            <point key="canvasLocation" x="-128" y="1191"/>
         </scene>
         <!--Tab View Controller-->
         <scene sceneID="Zgj-67-TNH">
@@ -86,7 +208,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d6a-bE-MmT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="218" y="178"/>
+            <point key="canvasLocation" x="-226" y="361"/>
         </scene>
         <!--Navigation View Controller-->
         <scene sceneID="dVd-4Q-hLu">
@@ -103,7 +225,28 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pyh-XR-a4G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-265" y="357"/>
+            <point key="canvasLocation" x="-689" y="361"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Dpm-EB-X9C">
+            <objects>
+                <viewController id="azn-nw-rc3" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YiU-XA-WLN"/>
+                        <viewControllerLayoutGuide type="bottom" id="c2p-8V-xva"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BVo-94-IwP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LWk-ML-n8f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="cart" width="49" height="47"/>
+    </resources>
 </document>
